ch08/8-4_ovs-networkpolicy/allow-27017.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-27107
spec:
 podSelector:
   matchLabels:
     app: mongodb
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         app: userregsvc      
   ports:
   - protocol: TCP
     port: 27017
