ch08/8-4_ovs-networkpolicy/allow-3306.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-3306
spec:
 podSelector:
   matchLabels:
     app: mysql
 ingress:
 - from: 
   - podSelector:
       matchLabels:
         app: emailsvc        
   ports:
   - protocol: TCP
     port: 3306
