ch08/8-4_ovs-networkpolicy/allow-8080-emailsvc.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-emailsvc 
spec:
  podSelector:
    matchLabels:
      app: emailsvc
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          project: userregservices
    ports:
    - protocol: TCP
      port: 8080
