ch08/8-4_ovs-networkpolicy/allow-8080-twitter.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-twitter  
spec:
  podSelector:
    matchLabels:
      app: twitter-api 
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
