ch08/8-4_ovs-networkpolicy/allow-8080-userregsvc.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-userregsvc
spec:
  podSelector:
    matchLabels:
      app: userregsvc
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
